[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "synchroteam_py"
version = "0.1.0"
description = "Python wrapper for Synchroteam API."
authors = [
    { name = "Michel Muñoz", email = "michelmzco@gmail.com" }
]
readme = "README.md"
dependencies = [
    "requests",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["synchroteam_py"]
